# speedtest

./: .gitignore  CMakeLists.txt  cli.c  cli.h  main.c
libspeedtest/: CMakeLists.txt  md5.c  md5.h  speed_test_error.c  speed_test_error.h  speedtest.c  speedtest.h  util.c  util.h
